--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-date-picker": "^4.3.3",
     "react-native-device-info": "^10.11.0",
     "react-native-element-dropdown": "^2.10.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image": "^0.1.1",
     "react-native-image-picker": "^7.0.2",
@@ -35,8 +36,9 @@
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.5.1",
+    "react-native-xml2js": "^1.0.3",
     "react-redux": "^8.1.3"
-  },
+    },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
