--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.5.1",
     "react-native-xml2js": "^1.0.3",
-    "react-redux": "^8.1.3"
-    },
+    "react-redux": "^8.1.3",
+    "react-native-push-notification": "^8.1.1",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/messaging": "^19.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
