--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/messaging": "^19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
@@ -25,9 +27,10 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image": "^0.1.1",
-    "react-native-image-picker": "^7.0.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.10.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "3.5.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.7.1",
@@ -37,10 +40,7 @@
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.5.1",
     "react-native-xml2js": "^1.0.3",
-    "react-redux": "^8.1.3",
-    "react-native-push-notification": "^8.1.1",
-    "@react-native-firebase/app": "^19.0.1",
-    "@react-native-firebase/messaging": "^19.0.1"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
