iOS working fine without push notifications.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,6 +26,8 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+use_modular_headers!
+
 target 'RN_MAB' do
   config = use_native_modules!
 
